2004-05-4 Duncan Coutts <duncan@coutts.uklinux.net>

	* configure.in, Makefile, mk/config.mk.in: allow libglade to be
	built without the gnome modules.

2004-05-2 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/treeList/TreeStore.chs: added method treeStoreClear

	* Makefile: fix typo

2004-05-2 Duncan Coutts <duncan@coutts.uklinux.net>

	* demo/buttonbox/Makefile, demo/concurrent/Makefile,
	demo/glade/Makefile, demo/graphic/Makefile, demo/hello/Makefile,
	demo/sourceview/Makefile, demo/treeList/Makefile,
	demo/unicode/Makefile: removed unnecessary required packages

	* demo/sourceview/SourceViewTest.hs: remove Mogul dependancy

	* gtk/abstract/FileChooser.chs: add signals & change some return
	types to Maybe

	* demo/filechooser/FileChooserDemo: flesh out demo

	* configure.in, Makefile, mk/config.mk.in: change gnome modules
	to be enabled as a group rather than being individually enabled

2004-04-30 Duncan Coutts <duncan@coutts.uklinux.net>

	* sourceview/Makefile,
	* glade/Makefile: added proprocessor pass for hierarchy.list

	* glade/Glade.chs: fix lib prefix

	* gtk/entry/EntryCompletion.chs, gtk/layout/Expander.chs,
	gtk/menuComboToolbar/ComboBoxEntry.chs,
	gtk/menuComboToolbar/ComboBox.chs: fix descriptions in headers

	* gtk/abstract/ButtonBox.chs, gtk/layout/HButtonBox.chs,
	gtk/layout/VButtonBox.chs, demo/buttonbox/Makefile,
	demo/buttonbox/ButtonBox.hs, AUTHORS: new widgets and demo
	contributed by Matthew Walton

	* gtk/abstract/Bin.chs: new (slightly pointless) abstract class

	* gtk/general/Gtk.hs: export new modules

	* gtk/general/Structs.hsc: bug fix for toResponse. Can now get
	response code back from dialogs ok.

	* gtk/abstract/FileChooser.chs, gtk/misc/FileChooserWidget.chs,
	gtk/windows/FileChooserDialog.chs, gtk/general/Gtk.hs,
	demo/filechooser/Makefile, demo/filechooser/FileChooserDemo.hs:
	added new FileChooser modules and a (unfinished) demo program

	* gtk/general/Gtk.hs: temporarily disable building